fix(alert): style be align

--- a/src/alert/style/index.less
+++ b/src/alert/style/index.less
@@ -4,7 +4,7 @@
 
 .@{alert-prefix-cls} {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   box-sizing: border-box;
   width: 100%;
   padding: 20px;
@@ -18,7 +18,7 @@
 
   & .@{alert-prefix-cls}-content {
     flex: 1;
-    margin: 0 8px;
+    margin: 0 0 0 8px;
     color: @gray-5;
 
     & .@{alert-prefix-cls}-content-title {
@@ -39,15 +39,18 @@
       .text-body1();
     }
   }
-
-  & .@{alert-prefix-cls}-closeIcon {
+  & .@{alert-prefix-cls}-content-no-icon {
+    margin: 0;
+  }
+  & .@{alert-prefix-cls}-closeButton {
     flex-shrink: 0;
     align-self: flex-start;
+    width: 30px;
+    margin: 0;
+    padding: 0;
     font-weight: @weight-font-semi-bold;
+    border: none;
     cursor: pointer;
-    svg {
-      fill: @gray-5;
-    }
   }
 }
 
